--- a/package.json
+++ b/package.json
@@ -1,15 +1,53 @@
 {
-  "name": "inkbot-server",
-  "version": "1.0.0",
-  "description": "the backend server for inkbot",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "inkbot-server"
-  },
-  "author": "",
-  "license": "ISC"
+	"name": "inkbot-server",
+	"version": "1.0.0",
+	"description": "the backend server for inkbot",
+	"main": "server.js",
+	"scripts": {
+		"start": "node server.js",
+		"start:DEV": "nodemon server.js",
+		"build": "set NODE_ENV=production node server.js",
+		"debug": "ndb server.js",
+		"debug:prod": "SET NODE_ENV=production& ndb server.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "intbot-server"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"compression": "^1.7.4",
+		"cors": "^2.8.5",
+		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
+		"got": "^13.0.0",
+		"helmet": "^7.0.0",
+		"jsonwebtoken": "^9.0.1",
+		"mongoose": "^7.4.1",
+		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.1",
+		"ndb": "^1.1.5",
+		"nodemon": "^3.0.1",
+		"otp-generator": "^4.0.1",
+		"slugify": "^1.6.6",
+		"uuid": "^9.0.0",
+		"validator": "^13.9.0"
+	},
+	"devDependencies": {
+		"@types/nodemailer": "^6.4.7",
+		"eslint": "^8.30.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jsx-a11y": "^6.6.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-react": "^7.31.11",
+		"prettier": "^2.8.1"
+	},
+	"engines": {
+		"node": ">=18.0.0"
+	}
 }
