--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
 		"ndb": "^1.1.5",
+		"nodemailer": "^6.9.4",
 		"nodemon": "^3.0.1",
 		"otp-generator": "^4.0.1",
 		"slugify": "^1.6.6",
