--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
 	"license": "ISC",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.20.2",
 		"compression": "^1.7.4",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"got": "^13.0.0",
 		"helmet": "^7.0.0",
+		"http": "^0.0.1-security",
 		"jsonwebtoken": "^9.0.1",
 		"mongoose": "^7.4.1",
 		"morgan": "^1.10.0",
@@ -32,7 +34,9 @@
 		"nodemailer": "^6.9.4",
 		"nodemon": "^3.0.1",
 		"otp-generator": "^4.0.1",
+		"save": "^2.9.0",
 		"slugify": "^1.6.6",
+		"socket.io": "^4.7.2",
 		"uuid": "^9.0.0",
 		"validator": "^13.9.0"
 	},
