--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"ndb": "^1.1.5",
 		"nodemailer": "^6.9.4",
 		"nodemon": "^3.0.1",
+		"openai": "^3.3.0",
 		"otp-generator": "^4.0.1",
 		"save": "^2.9.0",
 		"slugify": "^1.6.6",
