--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"fs": "^0.0.1-security",
 		"got": "^13.0.0",
 		"helmet": "^7.0.0",
 		"http": "^0.0.1-security",
