--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nodemon": "^3.0.1",
     "openai": "^3.3.0",
     "otp-generator": "^4.0.1",
+    "path": "^0.12.7",
     "save": "^2.9.0",
     "slugify": "^1.6.6",
     "uuid": "^9.0.0",
